external-crates/move/crates/move-compiler/tests/development/enums/matching/haskell_maybe.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/haskell_maybe.move:3:17
  │
3 │     public enum Maybe<T> has drop {
  │                 ^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

